<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GroupRiding</string>
    <string name="app_version">0.1</string>

    <string name="stringStartGroupRiding">Start Group Riding</string>
    <string name="stringStopGroupRiding">stop Group Riding</string>
    <string name="stringRecodingStart">Route Recoding</string>
    <string name="stringRecodingStop">Recoding Stop</string>
    <string name="stringInvite">invite</string>

    <string name="stringMenuInvite">invite</string>
    <string name="stringMenuDestinationSet">Route Setting</string>
    <string name="stringMenuDestinationClear">Route Off</string>
    <string name="stringMenuRouteRecodingStart">Route Recoding</string>
    <string name="stringMenuSetting">setting</string>

    <string name="stringBtnCreate">Create</string>
    <string name="stringBtnShare">Share</string>
    <string name="stringBtnJoin">Join</string>
    <string name="stringBtnClose">Close</string>
    <string name="stringBtnOk">Ok</string>
    <string name="stringBtnYes">Yes</string>
    <string name="stringBtnNo">No</string>
    <string name="stringBtnSave">Save</string>
    <string name="stringBtnStart">Start</string>

    <string name="stringSettingTopTitle">Setting</string>
    <string name="stringSettingTitleNickname">Nickname</string>
    <string name="stringSettingTitleSamplingInterval">Sampling Interval</string>
    <string name="stringSettingTitleMaxSpeed">Max Speed</string>
    <string name="stringSettingTitleLockScreen">Show on the lock screen</string>
    <string name="stringSettingTitleAppVersion">App version</string>
    <string name="stringSettingTitleOpenSourceLicense">OpenSource License</string>
    <string name="stringSettingTitleDeveloperInfomation">Developer</string>
    <string name="stringSettingTitlePrivacyPolicy">Privacy Policy</string>

    <string name="serviceMessageGroupRecording">The route is recording</string>
    <string name="serviceMessageGroupRidingStart">Group Riding Service is running</string>
    <string name="toastMessageGPSReception">Waiting for GPS reception</string>


    <!-- 다이얼로그 TITLE, MESSAGE -->
    <string name="failDialogTitle_groupJoinFail">Group Join Fail</string>
    <string name="failDialogMessage_groupJoinFail">Invitation code is invalid</string>

    <string name="dialogTitle_recordStart">Route Recording</string>
    <string name="dialogMessage_recordStart">Record the current driving route\n(*The route will be saved correctly only when recording is finished*)</string>

    <string name="dialogTitle_groupRidingStart">Group Riding</string>
    <string name="dialogMessage_groupRidingStart">Would you like to start group riding?</string>

    <string name="dialogTitle_groupRidingInvite">Group Invite</string>
    <string name="dialogMessage_groupRidingInvite">Share the code below to invite friends</string>

    <string name="dialogTitle_groupRidingJoin">Group Join</string>
    <string name="dialogMessage_groupRidingJoin">Enter the invitation code to join the group</string>

    <string name="dialogTitle_groupRidingFinish">Group Riding End</string>
    <string name="dialogMessage_groupRidingFinish">Group riding is finished.\nClick the [Save] button to save the path.</string>

    <string name="dialogTitle_routeRecordFinish">Route Save</string>
    <string name="dialogMessage_routeRecordFinish">Please enter below to finish saving the route</string>

    <string name="dialogTitle_groupRidingStop">Group Riding End</string>
    <string name="dialogMessage_groupRidingStop">Would you like to end group riding?</string>

    <string name="dialogTitle_routeRecordStop">Recording End</string>
    <string name="dialogMessage_routeRecordStop">Are you sure you want to end route recording?</string>

    <string name="dialogTitle_routeShowStop">Route Off</string>
    <string name="dialogMessage_routeShowStop">Do you want to unmark the route?</string>

    <string name="groupRidingServiceHostWAN">http://baka.kr:6060</string>
    <string name="groupRidingServiceHostLAN">http://192.168.35.235:6060</string>

</resources>
