<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.MenuFragment">
    <data>
        <variable
            name="vm"
            type="kr.baka.groupriding.viewmodel.MenuViewModel" />
    </data>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="top"
        android:padding="4dp"
        android:background="@color/colorDefaultForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:visibility="@{vm.groupRidingStopVisibility}"
            android:onClick="@{()->vm.startGroupRidingService()}"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_group"
                android:padding="10dp"
                android:tint="#555"
                android:layout_width="60dp"
                android:layout_height="40dp"/>
            <TextView
                android:textSize="12dp"
                android:textAlignment="center"
                android:text="@string/stringStartGroupRiding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="@{vm.groupRidingStartVisibility}"
            android:onClick="@{()->vm.stopGroupRidingService()}"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_stop"
                android:tint="#FF5555"
                android:layout_width="60dp"
                android:layout_height="40dp"/>
            <TextView
                android:textSize="12dp"
                android:textAlignment="center"
                android:text="@string/stringStopGroupRiding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="@{vm.groupRidingStartVisibility}"
            android:onClick="@{()->vm.inviteCodeDialogShow()}"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_post"
                android:padding="5dp"
                android:tint="@color/colorDefaultBackGround"
                android:layout_width="60dp"
                android:layout_height="40dp"/>
            <TextView
                android:textSize="12dp"
                android:textAlignment="center"
                android:text="@string/stringInvite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_recording"
                android:padding="10dp"
                android:tint="#555"
                android:layout_width="60dp"
                android:layout_height="40dp"/>
            <TextView
                android:textSize="12dp"
                android:textAlignment="center"
                android:text="@string/stringRecodingStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_route"
                android:padding="10dp"
                android:tint="#555"
                android:layout_width="60dp"
                android:layout_height="40dp"/>
            <TextView
                android:textSize="12dp"
                android:textAlignment="center"
                android:text="@string/stringMenuDestination"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="@{()->vm.showSettingActivity()}"
            android:orientation="vertical"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_settings_black_24dp"
                android:padding="10dp"
                android:tint="#555"
                android:layout_width="60dp"
                android:layout_height="40dp"/>
            <TextView
                android:textSize="12dp"
                android:textAlignment="center"
                android:text="@string/stringMenuSetting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</layout>